5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1728_2499.log
== TEST (2019-05-15 15:25:59) 
-- CODE:
from math import factorial
c=int(input("aki:"))
f=factorial(c)
print(f)
-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:28) 
-- CODE:
from math import factorial
c=int(input("aki:"))
f=factorial(c)
print(f)
-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:38) 
-- CODE:
from math import factorial
c=int(input("aki:"))

k=1/factorial(c)


print(k)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:57:20) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k)
t=k
xk=k
while(t>0):
	x=xk-1
	e=1/factorial(x)
	g=e
	t=t-1
	
print(c+g)
-- OUTPUT:
0.0015873015873015873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:57:38) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k)
t=k
xk=k
while(t>0):
	x=xk-1
	e=1/factorial(x)
	g=e
	t=t-1
	
print(c+g)
-- OUTPUT:
0.0015873015873015873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:57:54) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k)
t=k
xk=k
while(t>0):
	x=xk-1
	e=1/factorial(x)
	g=e
	t=t-1
	
print(c+g)
-- EXECUTION TIME:
0.158417
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.0015873015873015873
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.2235461970911706e-11
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.009722222222222222
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:59:36) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c)
-- OUTPUT:
0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:00:00) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:00:18) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:00:58) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k)

	
print(c)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:01:28) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c)
-- OUTPUT:
0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:01:49) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c)
-- OUTPUT:
0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:03:10) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:03:45) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:03:57) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:07:02) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)

	
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:15:06) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=c-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y=1/factorial(xc)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:16:04) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=c-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y=1/factorial(xc)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:16:30) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=c-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y=1/factorial(xc)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:19:04) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+1)
-- OUTPUT:
1.0013888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:19:29) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+z)
-- OUTPUT:
2.7194444444444446
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:20:16) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8)
-- EXECUTION TIME:
0.23419
-- ERROR:
  File "/home/codebench/codes/1728/2499/main.py", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:18) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:24) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:20:31) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.14238
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:59) 
-- CODE:
from math import factorial
k=int(input("Digite um numero: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:22:42) 
-- CODE:
c=1/factorial(k-1)
from math import factorial
k=int(input("Digite um numero: "))

xc=k-1
t=k
z=0

while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.250718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2499/main.py", line 1, in <module>
    c=1/factorial(k-1)
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:24:59) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.199947
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:25:14) 
-- CODE:
from math import factorial
k=int(input(""))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.219115
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:25:18) 
-- CODE:
from math import factorial
k=int(input(""))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:25:19) 
-- CODE:
from math import factorial
k=int(input(""))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.207619
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:25:26) 
-- CODE:
from math import factorial
k=int(input("k"))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.198404
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:25:56) 
-- CODE:
from math import factorial
k=float(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.216698
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:26:01) 
-- CODE:
from math import factorial
k=float(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:26:03) 
-- CODE:
from math import factorial
k=float(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.273746
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:27:57) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while((t>0)or(k<0)):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.186962
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
Digite um numero k: 2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
Digite um numero k: 2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
Digite um numero k: 2.725
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:28:24) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while((t>0)or(k<0)):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:29:10) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while((t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.118268
-- ERROR:
  File "/home/codebench/codes/1728/2499/main.py", line 7
    while((t>0):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:29:12) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while((t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- ERROR:
File "XXXX", line 7
    while((t>0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:29:19) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:29:30) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:31:31) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
else:	
print(round(c+z, 8))
-- ERROR:
File "XXXX", line 8
    while(t>0):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:31:47) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
 	while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
else:	
print(round(c+z, 8))
-- ERROR:
File "XXXX", line 9
    y=1/factorial(xc)
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:32:14) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
 	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
else:	

	print(round(c+z, 8))
-- ERROR:
File "XXXX", line 9
    y=1/factorial(xc)
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:34:03) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
else:	
print(round(c+z, 8))
-- ERROR:
File "XXXX", line 14
    print(round(c+z, 8))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:34:55) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
	print(round(c+z, 8))	
else:	
print(erro)
-- ERROR:
File "XXXX", line 15
    print(erro)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:35:04) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
	print(round(c+z, 8))	
else:	
	print(erro)
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:36:19) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
	print(round(c+z, 8))	
else:	
	print(erro)
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:36:34) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
if(k>0):
	while(t>0):
		y=1/factorial(xc)
		z=y+z
		xc=xc-1
		t=t-1
	print(round(c+z, 8))	
else:	
	print(erro)
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:41:29) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.164135
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:41:31) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- OUTPUT:
2.71944444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:42:01) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 9))
-- OUTPUT:
2.719444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:42:53) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(c+z)
-- OUTPUT:
2.7194444444444446
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:43:07) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))
c=1/factorial(k-1)
xc=k-1
t=k
z=0
while(t>0):
	y=1/factorial(xc)
	z=y+z
	xc=xc-1
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.140367
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71944444
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.725
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:47:58) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))


t=0
soma=0
while(t>0):
	y=1/factorial(t)
	soma=soma+y
	t=t-1
print(round(c+z, 8))
-- EXECUTION TIME:
0.207068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2499/main.py", line 11, in <module>
    print(round(c+z, 8))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:48:23) 
-- CODE:
from math import factorial
k=int(input("Digite um numero k: "))


t=0
soma=0
while(t<k):
	y=1/factorial(t)
	soma=soma+y
	t=t+1
print(round(soma, 8))
-- EXECUTION TIME:
0.133364
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
